--- a/src/main/resources/com/example/project_ver1/login-view.fxml
+++ b/src/main/resources/com/example/project_ver1/login-view.fxml
@@ -3,12 +3,20 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #010537;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_ver1.controller.LoginController">
    <children>
-      <TextField layoutX="337.0" layoutY="212.0" prefHeight="42.0" prefWidth="238.0" promptText="Password" style="-fx-background-color: #f6ffa6; -fx-font-weight: 900;" AnchorPane.leftAnchor="337.0" AnchorPane.rightAnchor="25.0" />
-      <ImageView fx:id="img_login" fitHeight="272.0" fitWidth="265.0" layoutX="49.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="52.0" AnchorPane.leftAnchor="49.0" AnchorPane.rightAnchor="313.0" AnchorPane.topAnchor="76.0" />
-      <TextField layoutX="337.0" layoutY="118.0" prefHeight="42.0" prefWidth="238.0" promptText="Username" style="-fx-background-color: #f6ffa6; -fx-font-weight: 900; -fx-background-position: s;" AnchorPane.bottomAnchor="240.0" AnchorPane.leftAnchor="337.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="118.0" />
-      <Button layoutX="390.0" layoutY="321.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="124.0" style="-fx-background-color: #ffb84c; -fx-font-weight: 900;" text="Login" AnchorPane.leftAnchor="337.0" AnchorPane.rightAnchor="25.0" />
+      <VBox alignment="CENTER" layoutX="335.0" layoutY="152.0" spacing="20.0" AnchorPane.bottomAnchor="128.0" AnchorPane.leftAnchor="335.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="128.0">
+         <Text fill="#f6ffa6" text="Login">
+            <font>
+               <Font size="50.0" />
+            </font></Text>
+         <TextField layoutX="337.0" layoutY="179.0" prefHeight="42.0" prefWidth="238.0" promptText="Password" style="-fx-background-color: #f6ffa6; -fx-font-weight: 900;" AnchorPane.leftAnchor="337.0" AnchorPane.rightAnchor="25.0" />
+         <TextField layoutX="337.0" layoutY="118.0" prefHeight="42.0" prefWidth="238.0" promptText="Username" style="-fx-background-color: #f6ffa6; -fx-font-weight: 900; -fx-background-position: s;" AnchorPane.rightAnchor="25.0" />
+         <Button layoutX="337.0" layoutY="238.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="124.0" style="-fx-background-color: #ffb84c; -fx-font-weight: 900;" text="Login" AnchorPane.leftAnchor="337.0" AnchorPane.rightAnchor="25.0" />
+
+      </VBox>
+      <ImageView fx:id="img_login" fitHeight="272.0" fitWidth="265.0" layoutX="49.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="64.0" AnchorPane.leftAnchor="49.0" AnchorPane.rightAnchor="286.0" AnchorPane.topAnchor="64.0" />
    </children>
 </AnchorPane>
