--- a/src/main/resources/com/example/project_ver1/employ-view.fxml
+++ b/src/main/resources/com/example/project_ver1/employ-view.fxml
@@ -19,6 +19,7 @@
                               <Button defaultButton="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Tìm kiếm" HBox.hgrow="ALWAYS" />
                            </children>
                         </HBox>
+                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#getData" text="Hiển thị data" VBox.vgrow="ALWAYS" />
                         <Separator prefWidth="200.0" />
                         <Label text="Chỉnh sửa nhân viên" textFill="WHITE">
                            <font>
@@ -89,7 +90,7 @@
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <columns>
                         <TableColumn maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="39.0" text="ID" />
                         <TableColumn maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="135.0" text="Tên" />
